--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -7,7 +7,6 @@
 
     <description>
         <![CDATA[
-        <p>
             Provides ElementUI framework support to all JetBrains IDEs that support JavaScript<br>
             Notice: before use this plugin, please install the <a rel="nofollow" href="https://plugins.jetbrains.com/plugin/9442-vue-js" target="_blank">Vue.js</a> plugin first<br>
             <b>features</b>
@@ -19,8 +18,7 @@
                 <li>Support ElementUI tag attribute documentation</li>
                 <li>Suppress the Unknown html tag warnings of ElementUI tags</li>
             <ol>
-        </p>
-        <p>
+            <br>
             为所有支持 JavaScript 的 JetBrains IDEs 提供 ElementUI 框架支持<br>
             注意: 在使用插件之前, 请先安装 <a rel="nofollow" href="https://plugins.jetbrains.com/plugin/9442-vue-js" target="_blank">Vue.js</a> 插件<br>
             <b>特性</b>
@@ -32,16 +30,32 @@
                 <li>支持 ElementUI 标签属性文档提示</li>
                 <li>抑制 ElementUI 标签的 Unknown html tag 警告</li>
             <ol>
-        </p>
         ]]>
     </description>
+    <change-notes>
+        <![CDATA[
+            <ul>
+                <li><b>2.0.0</b></li>
+                <ul>
+                    <li>重构逻辑,采用更合理方式实现</li>
+                    <li>国际化支持</li>
+                    <li>bug修复</li>
+                </ul>
+            </ul>
+        ]]>
+    </change-notes>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>org.jetbrains.plugins.vue</depends>
+    <depends>org.intellij.plugins.markdown</depends>
+    <depends>com.intellij.modules.ultimate</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <defaultLiveTemplates file="liveTemplates/ElementUI"/>
-        <liveTemplateContext contextId="MyVue" baseContextId="Vue"
+        <liveTemplateContext contextId="InVue"
                              implementation="org.javamaster.elementui.liveTemplates.ElementUIVueTemplateContextType"/>
+        <liveTemplateContext contextId="InVueJs"
+                             implementation="org.javamaster.elementui.liveTemplates.ElementUIOtherTemplateContextType"/>
         <lang.documentationProvider language="HTML"
                                     implementationClass="org.javamaster.elementui.doc.ElementUIDocumentProvider"
                                     order="first"/>
@@ -54,4 +68,9 @@
                 order="first"/>
     </extensions>
 
+    <actions>
+<!--        <action id="TestAction" class="org.javamaster.elementui.convert.ConvertAction" text="TestAction">-->
+<!--            <add-to-group group-id="HelpMenu" anchor="first"/>-->
+<!--        </action>-->
+    </actions>
 </idea-plugin>
